Сохранил изменения перед слиянием